--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,6 @@
-certifi==2020.6.20
-cryptography==39.0.0
+certifi==2022.12.07
 ocsp_checker==1.9.11
+pyjarm==0.0.5
 pyOpenSSL==23.0.0
-requests==2.25.1
+requests==2.28.2
 termcolor==2.2.0
