--- a/.github/workflows/codeql.yml
+++ b/.github/workflows/codeql.yml
@@ -14,11 +14,11 @@ name: "CodeQL"
 on:
   push:
     branches: ["master"]
-  pull_request:
+  # pull_request:
     # The branches below must be a subset of the branches above
-    branches: ["master"]
+    # branches: ["master"]
   schedule:
-    - cron: "0 0 * * 1"
+    - cron: "0 0 * * 0"
 
 permissions:
   contents: read
